syntax = "proto3";

package test.integration.starttls;

message StartTlsFilterConfig {
}
